Thanks to Nate I am able to get my counters to reset after the user runs out of guesses. Added in lines 72,72,96,97.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Beat the Intel.
     </title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -68,6 +68,8 @@
                 console.log("Number of Losses " + numberOfLosses);
                 var losses = document.getElementById("losses");
                 losses.textContent = "Number of Losses: " + numberOfLosses;
+                var wins = document.getElementById("wins");
+                wins.textContent = "Number of Wins: " + numberOfWins;
                 var guesses = document.getElementById("guesses");
                 guesses.textContent = "Number of Guesses Remaining: " + numberOfGuesses;
                 // var remaining = document.getElementById("soFar");
@@ -90,6 +92,8 @@
                 numberOfGuesses--;
                 alert("You got won.");
                 console.log("Number of Wins " + numberOfWins);
+                var losses = document.getElementById("losses");
+                losses.textContent = "Number of Losses: " + numberOfLosses;
                 var wins = document.getElementById("wins");
                 wins.textContent = "Number of Wins: " + numberOfWins;
                 var guesses = document.getElementById("guesses");
